// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoteInfo component renders a .Note by default 1`] = `
<div
  className="Note"
>
  <h2
    className="Note__title"
  >
    <Link
      to="/note/undefined"
    />
  </h2>
  <button
    className="Note__delete"
    type="button"
  >
    Delete Note
  </button>
  <div
    className="Note__modified_date"
  />
</div>
`;

exports[`NoteInfo component renders the Note given props 1`] = `
<div
  className="Note"
>
  <h2
    className="Note__title"
  >
    <Link
      to="/note/a"
    >
      test-class-name
    </Link>
  </h2>
  <button
    className="Note__delete"
    type="button"
  >
    Delete Note
  </button>
  <div
    className="Note__modified_date"
  >
    <Component />
  </div>
</div>
`;
